[package]
name = "match-trade"
version = "0.1.0"
authors = ["wnstar <329291362@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_decimal="^1.10.3"
skiplist="^0.3.0"
serde = { version = "^1.0.124", features = ["derive"] }

[dev-dependencies]
chrono = "^0.4"
